Done with Video Player and likes functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_storage: ^11.5.1
   cloud_firestore: ^4.13.1
   image_picker: ^1.0.4
+  video_player: ^2.8.1
+  video_compress:
 
 dev_dependencies:
   flutter_test:
