--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.0.4
   video_player: ^2.8.1
   video_compress:
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
