--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   video_player: ^2.8.1
   video_compress:
   timeago: ^3.6.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
